--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,9 @@
+{% if page.path contains "projects" %}
+    {% assign prefix = site.github.url | append: "/" %}
+{% else %}
+    {% assign prefix = "" %}
+{% endif %}
+
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -8,20 +14,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="{{ site.github.url }}/#page-top">Gillian Martin Photography</a>
+            <a class="navbar-brand page-scroll" href="{{ prefix }}#page-top">Gillian Martin Photography</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="{{ site.github.url }}/#about">About</a>
+                    <a class="page-scroll" href="{{ prefix }}#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ site.github.url }}/#services">Portfolio</a>
+                    <a class="page-scroll" href="{{ prefix }}#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ site.github.url }}/#contact">Contact</a>
+                    <a class="page-scroll" href="{{ prefix }}#contact">Contact</a>
                 </li>
             </ul>
         </div>
