--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,40 +1,54 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Page Content -->
-<div class="container">
+<head>
 
-    <div class="col-lg-12">
-        <h1 class="page-header">{{page.title}}</h1>
-    </div>
+    {% include header.html %}
 
-    {{ content }}
+</head>
 
-    <div class="row">
-        {% for image in site.static_files %}
-            {% if image.path contains "img/project1" %}
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="{{ image.path }}">
-                    <img class="img-responsive" src="{{ image.path }}" alt="">
-                </a>
-            </div>
-            {% endif %}
-        {% endfor %}
+<body>
 
-    </div>
+    {% include navbar.html %}
 
-    <hr>
+    <div class="container gallery">
 
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Gillian Martin 2016</p>
-            </div>
+        <div class="col-lg-12">
+            <h1 class="page-header">{{page.title}}</h1>
         </div>
-    </footer>
 
-</div>
-<!-- /.container -->
+        {{ content }}
+
+        <div class="row">
+            {% for image in site.static_files %}
+                {% assign project_imgs = 'img/' | append: page.name %}
+                {% if image.path contains project_imgs %}
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a class="thumbnail" href="{{ image.path }}">
+                        <img class="img-responsive" src="{{ image.path }}" alt="">
+                    </a>
+                </div>
+                {% endif %}
+            {% endfor %}
+
+        </div>
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Gillian Martin 2016</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+
+</body>
+
+</html>
+
+
 
