--- a/css/thumbnail-gallery.css
+++ b/css/thumbnail-gallery.css
@@ -4,8 +4,9 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-.container {
+.gallery {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+
 }
 
 .thumb {
