Added project scrollbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-{% if page.path contains "projects" %}
+{% if page.path contains "project" %}
     {% assign prefix = site.github.url | append: "/" %}
 {% else %}
     {% assign prefix = "" %}
