--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Gillian Martin Photography</title>
+<title>{{ page.title }}</title>
 
 <!-- Bootstrap Core CSS -->
 <link rel="stylesheet" href="{{ site.github.url }}/css/bootstrap.min.css" type="text/css">
