--- a/css/creative.css
+++ b/css/creative.css
@@ -274,7 +274,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    background: rgba(79,140,161,.9);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -473,4 +473,24 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
+}
+
+
+@media (min-width: 979px) {
+  #sidebar.affix-top {
+    position: static;
+  	margin-top:100px;
+  	width:150px;
+  }
+
+  #sidebar.affix {
+    position: fixed;
+    top:70px;
+    width:150px;
+  }
+}
+
+#sidebar li.active {
+  	border:0 #4f8ca1 solid;
+  	border-right-width:4px;
 }
